[WIP] Add first steps migrating gama.dependencies to gradle + various work-in-progress informations